/*
 * Copyright (c) 2024 TeamDev. All rights reserved.
 * TeamDev PROPRIETARY and CONFIDENTIAL.
 * Use is subject to license terms.
 */

syntax = "proto3";

package spine.chords.proto.value.net;

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.chords.proto.value.net";
option java_outer_classname = "NetProto";
option java_multiple_files = true;

import "spine/options.proto";

// An IP address, which can come in any of the supported IP address formats
// (IPv4, or IPv6).
message IpAddress {
  oneof value {
    option (is_required) = true;

    Ipv4Address ipv4 = 1;
    Ipv6Address ipv6 = 2;
  }
}

// An IPv4 address.
message Ipv4Address {

  // A 4-byte array, which contains the 4 bytes of IP address in the same order
  // that they come in the IP address.
  bytes value = 1 [(required) = true];
}

// An IPv6 address.
message Ipv6Address {

  // A 16-byte array, which specifies the IPv6 address.
  bytes value = 1 [(required) = true];
}
